--- a/swaggy_crows/src/CMakeLists.txt
+++ b/swaggy_crows/src/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_subdirectory(blueprints)
-
-add_executable(swaggy_crows swaggy_crows.cpp ${BLUEPRINTS})
-target_include_directories(swaggy_crows PUBLIC ${EXTERNAL_INCLUDE_PATHS} ../include/ )
+add_executable(swaggy_crows swaggy_crows.cpp)
+target_include_directories(swaggy_crows PUBLIC ${EXTERNAL_INCLUDE_PATHS})
 target_link_directories(swaggy_crows PUBLIC ${EXTERNAL_LIB_PATHS})
 target_compile_definitions(swaggy_crows PRIVATE ASIO_STANDALONE)
